@@ -1,3 +1,6 @@
+ParamHelpers_1.5:
+- added constr.clip to print.ParamSet and related internal functions to make prints more readable
+
 ParamHelpers_1.4:
 - sampleValue(s): 'discrete.names' now only affects discrtete params and not logicals anymore.
   logical params always result in R data type 'logical'
